@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-12-03T01:33:47Z",
+  "timestamp" : "2022-12-03T08:23:13Z",
   "count_outdated" : 641,
   "uniques_outdated" : 405,
-  "count" : 657,
+  "count" : 656,
   "uniques" : 414,
   "clones" : [
     {
       "timestamp": "2022-11-19T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
