@@ -1,10 +1,10 @@
 {
-  "count": 16,
+  "count": 15,
   "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-11-19T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
