@@ -1,3 +1,11 @@
+2022-12-03T08:23:13Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3607724717 # 669
+* notice: last 14d: unq all: 2 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 405 641 / 414 657
+* notice: next accum: outdated-unq outdated-all / unq all: 405 641 / 414 656
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-11-19]
+
 2022-12-03T01:33:47Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3606364105 # 668
 * notice: last 14d: unq all: 2 16
